syntax = "proto3";

option go_package = "https://github.com/atiaitu/Distributed_Systems/tree/main/Handin5/proto";

package proto;

service Auction {
    rpc SendBid(BidMessage) returns (Ack);
    rpc GetHighestBid(Name) returns (AckAndBid);
    rpc HandleNewClient(JoinMessage) returns (Ack);
    rpc BidStream(stream BidMessage) returns (stream BidMessage);
}

message Name {
    string Name = 1;
}

message AckAndBid {
    string message = 1;
    int64 bid = 2;
}

message Ack {
    string message = 1;
}

message BidMessage {
    string clientName = 1;
    int64 bid = 2;
    string identifier = 3;
}

message JoinMessage {
    string name = 1;
    string message = 2;
    string identifier = 3;
}